--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link class="rounded-circle" rel="icon" type="image/x-icon" href="{% static 'img/logo.jpg' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="{% block metadescription %}{% endblock metadescription %}" />
